fix: add scrollbar animation

--- a/app/ui/dashboard/sidebar.module.css
+++ b/app/ui/dashboard/sidebar.module.css
@@ -2,7 +2,6 @@
   overflow-y: auto;
   scrollbar-color: transparent transparent;
   scrollbar-width: thin;
-  transition: scrollbar-color 200ms ease-in-out;
 }
 .scroll:hover {
   scrollbar-color: #5d647285 transparent;
